# Hixl

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.md  SECURITY.md  Third_Party_Open_Source_Software_Notice  build.sh  classify_rule.yaml  requirements.txt  version.info
benchmarks/: A2_benchmark_performance.md  A3_benchmark_performance.md  CMakeLists.txt  README.md  benchmark.cpp  benchmark_d2d_throughput.cpp  hixl_cs_benchmark.cpp  hixl_ub_benchmark.cpp  hixl_ub_benchmark1.cpp  ub_endpoint_client.json  ub_endpoint_server.json
benchmarks/common/: tcp_client_server.cpp  tcp_client_server.h
cmake/device/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  README.md  adxl_engine_sample1.cpp  adxl_engine_sample2.cpp  client_server_h2d.cpp  decoder_pull_cache_and_blocks.cpp  decoder_push_cache_and_blocks.cpp  decoder_sample1.cpp  decoder_sample2.cpp  decoder_sample3.cpp  decoder_switch_roles.cpp  fabric_mem_d2d.cpp  hixl_roce_example.cpp  local_comm_res_client.json  local_comm_res_server.json  prompt_pull_cache_and_blocks.cpp  prompt_push_cache_and_blocks.cpp  prompt_sample1.cpp  prompt_sample2.cpp  prompt_sample3.cpp  prompt_switch_roles.cpp  server_server_d2d.cpp
src/hixl/: CMakeLists.txt
src/hixl/common/: ctrl_msg.h  ctrl_msg_plugin.cc  ctrl_msg_plugin.h  hccl_api.h  hccl_stub.cc  hixl_checker.h  hixl_cs.h  hixl_inner_types.h  hixl_log.h  hixl_utils.cc  hixl_utils.h  scope_guard.h  segment.cc  segment.h  thread_pool.cc  thread_pool.h
src/hixl/cs/: channel.cc  channel.h  complete_pool.cc  complete_pool.h  conn_msg_handler.cc  conn_msg_handler.h  endpoint.cc  endpoint.h  endpoint_store.cc  endpoint_store.h  hixl_cs.cc  hixl_cs_client.cc  hixl_cs_client.h  hixl_cs_server.cc  hixl_cs_server.h  hixl_mem_store.cc  hixl_mem_store.h  load_kernel.cc  load_kernel.h  mem_msg_handler.cc  mem_msg_handler.h  msg_handler.cc  msg_handler.h  msg_receiver.cc  msg_receiver.h
src/hixl/engine/: adxl_engine.cc  adxl_engine.h  client_manager.cc  client_manager.h  engine.h  engine_factory.cc  engine_factory.h  hixl_client.cc  hixl_client.h  hixl_engine.cc  hixl_engine.h  hixl_impl.cc  hixl_server.cc  hixl_server.h
src/llm_datadist/: CMakeLists.txt  llm_datadist_timer.cc  llm_datadist_timer.h  llm_datadist_v2.cc  llm_datadist_v2.h  llm_error_codes.cc  statistic_manager.cc  statistic_manager.h
src/llm_datadist/adxl/: adxl_checker.h  adxl_inner_engine.cc  adxl_inner_engine.h  adxl_utils.cc  adxl_utils.h  buffer_transfer_service.cc  buffer_transfer_service.h  channel.cc  channel.h  channel_manager.cc  channel_manager.h  channel_msg_handler.cc  channel_msg_handler.h  control_msg_handler.cc  control_msg_handler.h  fabric_mem_transfer_service.cc  fabric_mem_transfer_service.h  segment_table.cc  segment_table.h  statistic_manager.cc  statistic_manager.h  stream_pool.cc  stream_pool.h
src/llm_datadist/api/: adxl_engine_impl.cc  hixl_impl.cc  llm_datadist_impl.cc
src/llm_datadist/cache_mgr/: cache_manager.cc  cache_manager.h  comm_mem_manager.cc  comm_mem_manager.h  data_cache_engine.cc  data_cache_engine.h  swap_impl.cc  swap_impl.h
src/llm_datadist/common/: aligned_ptr.cc  aligned_ptr.h  common.h  def_types.h  llm_blocking_queue.h  llm_checker.h  llm_common.cc  llm_common.h  llm_inner_types.h  llm_log.h  llm_mem_pool.cc  llm_mem_pool.h  llm_scope_guard.h  llm_string_util.h  llm_thread_pool.cc  llm_thread_pool.h  llm_utils.cc  llm_utils.h  mem_utils.h  msg_handler_plugin.cc  msg_handler_plugin.h  rank_table_generator.cc  rank_table_generator.h  rank_table_generator_v1.cc  rank_table_generator_v1.h  rank_table_generator_v2.cc  rank_table_generator_v2.h
src/llm_datadist/data_transfer/: d2d_data_transfer_job.cc  d2d_data_transfer_job.h  d2h_data_transfer_job.cc  d2h_data_transfer_job.h  data_transfer_client.cc  data_transfer_client.h  data_transfer_job.h  data_transfer_utils.cc  data_transfer_utils.h  h2d_data_transfer_job.cc  h2d_data_transfer_job.h  layer_wise_transfer_job.cc  layer_wise_transfer_job.h
src/llm_datadist/fsm/: base_state.h  idle_state.cc  idle_state.h  receive_state.cc  receive_state.h  send_state.cc  send_state.h  state_manager.cc  state_manager.h
src/llm_datadist/hccl/: hccl_adapter.cc  hccl_adapter.h  hccl_mem_comm.h
src/llm_datadist/link_mgr/: comm_entity.cc  comm_entity.h  comm_entity_manager.cc  comm_entity_manager.h  comm_link_manager.cc  comm_link_manager.h  link_msg_handler.cc  link_msg_handler.h  llm_link_manager.cc  llm_link_manager.h
src/llm_datadist/utils/: cache_access_table.cc  cache_access_table.h  sync_flag.cc  sync_flag.h  task_batcher.cc  task_batcher.h
src/ops/hixl_kernel/: CMakeLists.txt  kernel_launch.cc  kernel_launch.h
src/python/llm_datadist/: CMakeLists.txt  MANIFEST.in  setup.py
src/python/llm_datadist_wrapper/: CMakeLists.txt  llm_datadist_v2_wrapper.cc  llm_datadist_v2_wrapper.h  llm_datadist_wrapper.cc  llm_datadist_wrapper.h  llm_tensor.cc  llm_tensor.h  llm_wrapper.cc  llm_wrapper_v2.cc  metadef_wrapper.cc
src/python/llm_wrapper/: CMakeLists.txt  llm_datadist_v2_wrapper.cc  llm_datadist_v2_wrapper.h  llm_wrapper_v2.cc
src/python/metadef_wrapper/: CMakeLists.txt  metadef_wrapper.cc
tests/: CMakeLists.txt  run_test.sh
tests/cpp/: CMakeLists.txt
tests/cpp/hixl/: CMakeLists.txt
tests/cpp/llm_datadist/: CMakeLists.txt  adxl_engine_api_unittest.cc  aligned_ptr_unittest.cc  channel_pool_system_test.cc  channel_pool_unit_test.cc  data_cache_engine_unittest.cc  fabric_mem_transfer_service_unittest.cc  flow_graph_manager_unittest.cc  hixl_api_unittest.cc  llm_comm_link_manager_unittest.cc  llm_datadist_v1_api_unittest.cc  llm_datadist_v2_api_unittest.cc  llm_datadist_v2_unittest.cc  llm_flow_func_utest.cc  llm_utils_unittest.cc  llm_utils_v2_unittest.cc  segment_table_unittest.cc  statistic_manager_unittest.cc  test_adxl_engine_api.cc  test_data_cache_engine.cc  test_hixl_api.cc  test_llm_datadist_v1_api.cc  test_llm_datadist_v2_api.cc  test_llm_engine_v2.cc
tests/python/: test_cache_manager.py  test_cache_manager_ex.py  test_enable_local_comm_res.py  test_remote_cache_accessible.py  test_utils.py
(+373 files in other folders)
